feature(app): exopre password update endpoint
